--- a/SistemaUrgencia_v2.0/viewLayer/RegistroUrgencias/UrgenciasP2.xaml
+++ b/SistemaUrgencia_v2.0/viewLayer/RegistroUrgencias/UrgenciasP2.xaml
@@ -5,30 +5,30 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SistemaUrgencia_v2._0.viewLayer.RegistroUrgencias"
       mc:Ignorable="d"
-      Title="UrgenciasP2" Width="1522.227" Height="825.64">
+      Title="UrgenciasP2" Width="1324.227" Height="843.14">
 
 
-    <StackPanel Background="White" VerticalAlignment="Stretch">
+    <StackPanel Background="White" VerticalAlignment="Stretch" Margin="0">
         <Canvas Height="8" Margin="52,30,60,0" Background="#21CCEF" Opacity="0.73"/>
-        <Button Style="{StaticResource BotonD}" Margin="1280,30,107,0" FontSize="30" FontFamily="Segoe UI" FontStyle="Italic" Foreground="White" Background="#FFD4252B">
+        <Button Margin="1020,30,107,0" FontSize="30" FontFamily="Roboto" FontStyle="Italic" Foreground="White" Background="#FFD4252B" Height="44" Click="cancelar2">
             Cancelar
         </Button>
         <TextBlock TextWrapping="Wrap" Margin="140,-55,630,0" Height="67" FontSize="50" FontFamily="Arial Rounded MT" Foreground="#5FC2FB" ><Bold><Run Text="Datos Del Paciente"/></Bold></TextBlock>
         <Image Height="68" Margin="28,-80,0,0" Source="/SistemaUrgencia_v2.0;component/Image1.png" Stretch="Fill" HorizontalAlignment="Left" Width="94"/>
         <Canvas Height="8" Margin="52,0,60,0" Background="#21CCEF" Opacity="0.73"/>
-        <TextBlock Margin="80,0,-80,0" FontFamily="Roboto" FontSize="30" FontWeight="Regular" Foreground="#060610" >Por favor llene el sigiente formulario:</TextBlock>
+        <TextBlock Margin="80,0,732,0" FontFamily="Roboto" FontSize="30" FontWeight="Regular" Foreground="#060610" >Por favor llene el sigiente formulario:</TextBlock>
 
         <!--Datos personales-->
 
         <TextBlock Margin="109,10,1114,0" FontFamily="Roboto" FontSize="20" FontWeight="Regular" Foreground="#060610" >N° Historial:</TextBlock>
-        <TextBox Height="22" TextWrapping="Wrap" Text="TextBox" Margin="222,-24,1186,0"/>
+        <TextBox Height="22" TextWrapping="Wrap" Text="TextBox" Margin="222,-24,906,0"/>
 
         <!--Datos previos-->
 
         <TextBlock Margin="80,20,1048,0" FontFamily="Roboto" FontSize="25" FontWeight="Regular" Foreground="#060610" >valoracion inicial:</TextBlock>
 
-        <TextBlock Margin="155,10,1300,0" FontFamily="Roboto" FontSize="18" FontWeight="Regular" Foreground="#060610" >Dolor:</TextBlock>
-        <ComboBox  Margin="222,-24,1186,0">
+        <TextBlock Margin="155,10,1114,0" FontFamily="Roboto" FontSize="18" FontWeight="Regular" Foreground="#060610" >Dolor:</TextBlock>
+        <ComboBox  Margin="222,-24,976,0">
             <ComboBoxItem IsSelected="True">Agudo</ComboBoxItem>
             <ComboBoxItem>Cronico</ComboBoxItem>
             <ComboBoxItem>Emocional</ComboBoxItem>
@@ -43,18 +43,18 @@
             <ComboBoxItem>Severo</ComboBoxItem>
         </ComboBox>
 
-        <TextBlock Margin="389,-25,1058,0" Height="30" FontSize="18" FontFamily="Roboto">Fractura:</TextBlock>
-        <TextBox Margin ="469,-30,811,0" Height="24"></TextBox>
+        <TextBlock Margin="389,-25,860,0" Height="30" FontSize="18" FontFamily="Roboto">Fractura:</TextBlock>
+        <TextBox Margin ="469,-30,630,0" Height="24"></TextBox>
 
-        <TextBlock Margin="746,-30,712,0" Height="30" FontSize="18" FontFamily="Roboto">Lugar:</TextBlock>
+        <TextBlock Margin="746,-30,519,0" Height="30" FontSize="18" FontFamily="Roboto">Lugar:</TextBlock>
         <TextBox Margin ="810,-30,387,0" Height="24"></TextBox>
 
-        <TextBlock Margin="155,20,1300,0" Height="30" FontSize="18" FontFamily="Roboto">Alergias:</TextBlock>
-        <RadioButton GroupName="alergias" Margin="230,-30,1162,0" Height="20" FontSize="18" FontFamily="Roboto">No conocidas</RadioButton>
-        <RadioButton GroupName="alergias" Margin="377,-28,1092,0" Height="20" FontSize="18" FontFamily="Roboto">Si A:</RadioButton>
-        <TextBox Margin="440,-30,788,0" Height="24"></TextBox>
+        <TextBlock Margin="155,20,1094,0" Height="30" FontSize="18" FontFamily="Roboto">Alergias:</TextBlock>
+        <RadioButton GroupName="alergias" Margin="230,-30,947,0" Height="20" FontSize="18" FontFamily="Roboto">No conocidas</RadioButton>
+        <RadioButton GroupName="alergias" Margin="377,-28,884,0" Height="20" FontSize="18" FontFamily="Roboto">Si A:</RadioButton>
+        <TextBox Margin="440,-30,677,0" Height="24"></TextBox>
 
-        <Grid Height="326" Margin="40,30,953,0">
+        <Grid Height="326" Margin="40,30,812,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="116*"/>
                 <ColumnDefinition Width="65*"/>
@@ -164,13 +164,34 @@
             <TextBox Grid.Column="3" Grid.Row="8" FontSize="15" BorderBrush="Black" BorderThickness="1" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         </Grid>
 
-        <TextBlock Margin="664,-600,644,0" FontSize="18" Height="24" FontFamily="Roboto">Otros signos y síntomas:</TextBlock>
-        <TextBox Margin="863,-600,220,0" FontSize="18" Height="24"/>
+        <TextBlock Margin="664,-600,461,0" FontSize="18" Height="24" FontFamily="Roboto">Otros signos y síntomas:</TextBlock>
+        <TextBox Margin="863,-600,152,0" Height="24"/>
 
-        <TextBlock Margin="664,-480,644,0" FontSize="18" Height="28" FontFamily="Roboto">Necesidad de ayuda social:</TextBlock>
-        <RadioButton Margin="920,-480,550,0" Height="24" FontSize="18" FontFamily="Roboto">NO</RadioButton>
-        <RadioButton Margin="994,-480,372,0" Height="24" FontSize="18" FontFamily="Roboto">Si Entregados a:</RadioButton>
-        <TextBox Margin="1155,-480,60,0" Height="24"></TextBox>
+        <TextBlock Margin="568,-480,536,0" FontSize="18" Height="28" FontFamily="Roboto">Necesidad de ayuda social:</TextBlock>
+        <RadioButton Margin="796,-480,459,0" Height="24" FontSize="18" FontFamily="Roboto">NO</RadioButton>
+        <RadioButton Margin="866,-480,302,0" Height="24" FontSize="18" FontFamily="Roboto">Si Entregados a:</RadioButton>
+        <TextBox Margin="1041,-480,44,0" Height="24"></TextBox>
+        <Label Margin="1168,30,62,0" Height="34" FontFamily="Roboto" FontSize="20">Siguiente</Label>
+        <Button   Height="52" Margin="1156,0,50,0" Background="White" Click="Siguiente2">
+            <Image Source="/SistemaUrgencia_v2.0;component/Img/flecha.gif" RenderTransformOrigin="0.5,0.5" Width="88" Height="39">
+                <Image.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="180.00"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Image.RenderTransform>
+            </Image>
+        </Button>
+        <!--boton atras-->
+
+        <Label Margin="52,-140,1156,0" Height="34" FontFamily="Roboto" FontSize="20">Atras</Label>
+        <Button Height="52" Margin="50,-52,1156,0" Background="White" Click="atras1">
+            <Image Source="/SistemaUrgencia_v2.0;component/Img/flecha.gif" RenderTransformOrigin="0.5,0.5" Width="88" Height="39">
+                
+            </Image>
+        </Button>
     </StackPanel>
 
 </Page>
